--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,12 @@ dependencies:
     sdk: flutter
   carousel_slider: ^1.4.0
   flutter_staggered_animations: ^0.1.2
+  provider: ^4.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  shared_preferences: ^0.5.6
+  badges: ^1.1.0
 
 dev_dependencies:
   flutter_test:
